
Thu Jan 13 2005 
  * bug fixed on rational numbers class & use of negatives values
    allowed for both rational and integer class.

Mon Jan 10 2005
  * bug fixed on rational numbers class

Wed Jan 5 2005
  * First try for a class for rational numbers

Fri Dec 10 2004
  * Function Factorize

Fri Dec 09 2004: 0.2-2

Thu Dec 02 2004:
   * biginteger class changed to bigz
   * man page updated.

Sat Nov 27 2004:
   * New function c.biginteger, rep.biginteger, sizeinbase
   * former functions nextprime, isprime, gcdex, random rewritten.
     => no more gmp.cc, gmp.R
   * Functions for Fibonacci and Lucas number computation !
   * Some changes in C++ comments to have a doc with doxygen.

Wed Nov 24 2004:
   * Modifs on doc

Tue Nov 09 2004: 0.2-1
   * Suppressed macro definitions in Rinternals.h, and replaced macro calls with
     plain function names. Trying to avoid collisions with stl definitions, i.e. length()

Wed Oct 27 2004: 0.2
   * Vectorized engine rewritten

Mon Sep 27 2004: 0.1
   * Initial revision
