@@ -11,4 +11,4 @@
 
   * test, test, test, ...
 
-
+  * as.integer functions
