@@ -1,0 +1,3 @@
+
+PKG_LIBS = -lgmp
+
